force-app/main/default/objects/Zoho_Logs__c/fields/Contact_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_Id__c</fullName>
    <description>Contact Record Id</description>
    <inlineHelpText>Contact Record Id</inlineHelpText>
    <label>Contact Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>