force-app/main/default/objects/Zoho_Logs__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Operation performing</description>
    <inlineHelpText>Operation performing</inlineHelpText>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>