force-app/main/default/objects/Zoho_Logs__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>Status Code</description>
    <inlineHelpText>Status Code</inlineHelpText>
    <label>Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>