force-app/main/default/objects/Zoho_Logs__c/fields/Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Status_Message__c</fullName>
    <description>Status Message</description>
    <inlineHelpText>Status Message</inlineHelpText>
    <label>Status Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>